Refactor Landscape and subclasses for improved testability
Refactored Landscape, Bush, and Grass to support dependency injection of Random for better testability. Cleaned up constructors and comments, and fixed minor issues in Animal and Group classes for consistency and clarity.